Fix: nav dropdown content hiding behind elements in main element.

--- a/src/app/core/header/header.component.css
+++ b/src/app/core/header/header.component.css
@@ -80,7 +80,7 @@ div.navigation li:hover {
     position: absolute;
     min-width: 160px;
     box-shadow: 0px 10px 20px 0px rgba(0, 0, 0, 0.7);
-    z-index: 1;
+    z-index: 10000;
     background-color: var(--white);
     /* border-radius: 5px;       */
 }
